content and bug fix

--- a/frontend/personal-website/personal-website/src/app/components/black-jack-help/black-jack-help.component.html
+++ b/frontend/personal-website/personal-website/src/app/components/black-jack-help/black-jack-help.component.html
@@ -24,10 +24,7 @@
   <p>
     <li><b>Betting:</b> Players place their bets.</li>
     <li>
-      <b>Dealing:</b> Each player is dealt two cards, and the dealer also gets
-      two cards. The players' cards are usually dealt face up, while the dealer
-      has one card face up (the "upcard") and one card face down (the "hole
-      card").
+      <b>Dealing:</b> The dealer and player will start the game with one card.
     </li>
     <li>
       <b>Player's Turn:</b> Starting with the player to the dealer's left, each
@@ -40,7 +37,7 @@
         <i>Hit:</i> Take another card. Players can hit as many times as they
         want, but if they go over 21, they bust (lose).
       </li>
-      <li><i>Stand:</i> Keep their current hand and end their turn.</li>
+      <li><i>Stay:</i> Keep their current hand and end their turn.</li>
       <li>
         <i>Double Down:</i> Double their bet and receive only one more card.
       </li>
@@ -48,16 +45,14 @@
   </ul>
   <p>
     <li>
-      <b>Dealer's Turn:</b> After all players have completed their turns, the
-      dealer reveals their hole card. The dealer must hit until their total is
-      17 or higher. Some variations require the dealer to hit on a "soft 17" (a
-      hand containing an Ace valued as 11).
+      <b>Dealer's Turn:</b> After you; the players have completed your turn. The
+      dealer must hit until their total is your score or higher without going
+      Bust.
     </li>
     <li>
       <b>Winning:</b> Players win if their hand total is higher than the
       dealer's without exceeding 21, or if the dealer busts. If the player and
-      dealer have the same total, it's a "push" (tie), and the player's bet is
-      returned.
+      dealer have the same total, it's a Draw, and the player's bet is returned.
     </li>
   </p>
 </ul>
@@ -73,24 +68,13 @@
 </ul>
 
 <p><strong>Strategy Tips</strong></p>
-<ul>
-  <p>
-    <li>
-      Basic strategy charts can help players make optimal decisions based on the
-      dealer's upcard and the player's hand.
-    </li>
-    <li>
-      Always be mindful of table rules, as they can vary slightly from one
-      casino to another.
-    </li>
-  </p>
-</ul>
+<ul></ul>
 <p>
-  Blackjack is a mix of luck and strategy, making it an exciting game. If you
-  have any specific questions or want to know more about advanced strategies.
-  Enjoy playing!
+  Blackjack is a mix of luck and strategy, making it an exciting game, hope you
+  enjoy!
 </p>
 <hr />
+<br />
 <h3>Liability Disclaimer:</h3>
 <div class="col">
   <p>
