--- a/frontend/personal-website/personal-website/src/app/components/landing/landing.component.html
+++ b/frontend/personal-website/personal-website/src/app/components/landing/landing.component.html
@@ -1,30 +1,30 @@
 <h1>Welcome</h1>
 <div class="row">
   <h2>Announcement</h2>
-  <p style="text-align: center;">
+  <p style="text-align: center">
     This website is a work in progress. More features and content will be added
     in due time to further demonstrate Matthew's capability.
   </p>
 </div>
-<br>
+<br />
 <div class="row responsive-row">
   <div class="col responsive-col text-center" routerLink="/site-info">
     <img
       class="img-icon"
       src="assets\images\info-icon.jpg"
-      style="color: #ffffff;"
-    >
+      style="color: #ffffff"
+    />
     <h2 class="mt-2">About</h2>
     <p>
       Learn about the purpose of this website and its creator, including the
-      skills and experience Matthew has acquired.
+      plans Matthew has for this website.
     </p>
-</div>
-  <div class="col responsive-col text-center" routerLink={{blckJackGameRoute}}>
-    <img
-      class="img-icon "
-      src="assets\images\black-jack-icon.png"
-    >
+  </div>
+  <div
+    class="col responsive-col text-center"
+    routerLink="{{ blckJackGameRoute }}"
+  >
+    <img class="img-icon" src="assets\images\black-jack-icon.png" />
     <h2 class="mt-2">Black Jack</h2>
     <p>
       Play a game of blackjack with casual rules. In this demo, the insurance
