--- a/frontend/personal-website/personal-website/src/app/components/site-info/site-info.component.html
+++ b/frontend/personal-website/personal-website/src/app/components/site-info/site-info.component.html
@@ -3,40 +3,34 @@
 
 <p>
   My name is Matthew Hyndman, and I am actively seeking a position as an Angular
-  Developer.
+  Developer. This website showcases my skills and knowledge, aimed at potential
+  employers with developer vacancies.
 </p>
 
 <p>
-  This website serves as a showcase of my skills and knowledge for any potential
-  employer with a developer vacancy.
-</p>
-
-<p>
-  I have dedicated 8 months of unpaid study to mastering Angular and the Spring
-  Boot framework. Now I am developing this website to put everything I have
-  learned to pratice and will showcase it here.
+  Over the past 8 months, I have devoted myself to mastering Angular and the
+  Spring Boot framework through unpaid study. This website is a testament to my
+  dedication and an opportunity to put my learning into practice.
 </p>
 
 <h3>My future plans for this Website</h3>
 
 <p>
-  To make the process of development easier for myself I have dedicated phases
-  that are constantly evolving. Each phase is going to have varying requirements
-  and goals based on technical relevance, see the following:
+  To streamline the development process, I have outlined several evolving phases
+  with distinct technical goals:
 </p>
 
 <p>
   <strong>Phase 1 (complete)</strong><br />
-  Featuring the Blackjack Game, along with a Disclaimer and Landing page, all
-  developed using Angular.
+  Features: Blackjack Game, Disclaimer, and Landing Page—all developed using
+  Angular.
 </p>
 
 <p>
   <strong>Phase 2</strong><br />
-  I intend to expand this website further in Phase 2 (unless I secure a job
-  first), which will include Accounts with Security (Spring Boot and HTTPS).
-  Blackjack Record keeping (save your win, losses and pot to a Database) with
-  leader boards feature. <br />
+  Upcoming: User accounts with security (Spring Boot and HTTPS), Blackjack
+  record keeping (track wins, losses, and pot in a database), and a leaderboards
+  feature. <br />
   <i>Micro-Service to be integrated:</i><br />
   <a style="color: #fff" class="text-center" href="https://www.okta.com"
     ><img class="img-icon" src="assets\images\auth0_logo.png" /><br /><strong
@@ -47,26 +41,26 @@
 
 <p>
   <strong>Phase 3</strong><br />
-  I plan to make a mock Ecommerce Shop, and Customer Accounts (managed by
-  Auth-0) where mock transactions can be created to demonstrate a working
-  Payment Process being used.<br />
+  Future Development: A mock eCommerce shop with customer accounts (managed by
+  Auth-0), enabling the creation of mock transactions to demonstrate a working
+  payment process.<br />
   <i>Micro-Service to be integrated:</i><br />
   <a style="color: #fff" class="text-center" href="https://www.stripe.com"
     ><img class="img-icon" src="assets\images\stripe_logo.png" /><br /><strong
       >Stripe</strong
     ></a
-  ><br>
-  There will be more ideas added to this page as I work on this website.
+  ><br />
+  I will continually add new ideas to this page as the website evolves.
 </p>
 
 <p>
-  The website is built using CSS, TypeScript (JavaScript), and HTML. See Footer
-  for what Micro-Services are used.
+  This website is built using CSS, TypeScript (JavaScript), and HTML. For more
+  information on the micro-services used, please refer to the footer.
 </p>
 
 <p>
-  I can't wait to show you what else I am cabile of in the future! I hope you
-  enjoy the Blackjack Game!
+  I can't wait to show you more of what I am capable of in the future! I hope
+  you enjoy the Blackjack Game!
 </p>
 
 <p>
@@ -74,7 +68,7 @@
   Xenon is a noble gas on the periodic table with the Symbol of “Xe”<br />
   atomic number: 54<br />
   atomic weight: 131.293<br />
-  It can be found in the earth's atmosphere in small amounts and can be
-  considered good rocket fuel for deep space missions. It is easy to ionize has
-  low weight and high density in liquid form.
+  Found in small amounts in the Earth's atmosphere, Xenon is considered an
+  excellent rocket fuel for deep space missions due to its ease of ionization,
+  low weight, and high density in liquid form.
 </p>
